--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, maximum-scale=1.0, minimum-scale=1, user-scalable=yes, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>신흥 집계</title>
+    <title>sh_sum</title>
 </head>
 
 <body>
