--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="anssection">
                 <div class="login">
                     <h4>로그인 계정 집계</h4>
-                    <textarea name="loginsum" id="loginsum" cols="50" rows="10">생성된 로그인 API의 내용을 전체 붙여넣기 하세요</textarea>
+                    <textarea name="loginsum" id="loginsum" cols="50" rows="10" placeholder="생성된 로그인 API의 내용을 전체 붙여넣기 하세요"></textarea>
                     <div class="loginbutton">
                         <button type="button" id="login1">로그인 계정 수</button>
                         <p>클릭하면 결과가 나타납니다</p>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="banner">
                     <h4>배너 클릭 집계</h4>
-                    <textarea name="bannersum" id="bannersum" cols="50" rows="10">생성된 배너 API의 내용을 전체 붙여넣기 하세요</textarea>
+                    <textarea name="bannersum" id="bannersum" cols="50" rows="10" placeholder="생성된 배너 API의 내용을 전체 붙여넣기 하세요"></textarea>
                     <div class="bannerbutton-wrap">
                         <button type="button" id="button1">배너 클릭 수</button>
                         <div class="bannerans-wrap">
